test : criação de teste que verifica a proxima fase
test : criado um teste que verifica se com apenas 1 partida vencida ja aparece o vencedor cadastrado.